# glh-timer

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: build-push-deploy.yml  build-push-dockerhub.yml
app/: db.py  main.py  models.py  security.py  settings.py  utils.py
app/static/: site.webmanifest
app/static/css/: styles.css
app/static/js/: app.js
app/templates/: _timer_cards.html  _timer_script.html  base.html  csv_preview.html  edit_participant.html  edit_race.html  edit_race_part.html  edit_timing_event.html  home.html  login.html  manage_archived_participants.html  manage_archived_race_parts.html  manage_archived_races.html  manage_archived_timing_events.html  manage_organisers.html  manage_participants.html  manage_race_parts.html  manage_races.html  manage_timing_events.html  race.html  race_part_results.html  show_timer.html  submit_duration.html  submit_end.html  submit_start.html  wave_starts.html
backend/: .dockerignore  Dockerfile  glh_timer.db  make_qr.py  make_qr_pdf.py  requirements.txt  run_local.sh
backend/app/: auth.py  csv_export.py  db.py  main.py  models.py  schemas.py  services.py  settings.py
backend/app/templates/: base.html  (+16 more)
scripts/: generate_tutorial_doc.py
tests/: test_action_card_visibility.py  test_archiving.py  test_manage_organisers.py  test_pending_end_events.py  test_race_timezones.py  test_results_csv.py  test_template_response_compat.py  test_timer_start_events.py
tutorial_output/: glh_timer_tutorial.html
tutorial_output/chrome-profile/: Local State
(+91 files in other folders)
