[project]
name = "glh_timer"
version = "0.1.0"
description = "GLH Timer web app"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "jinja2>=3.1",
  "python-multipart>=0.0.9",
  "sqlalchemy>=2.0",
  "psycopg2-binary>=2.9",
  "passlib[bcrypt]>=1.7",
  "python-dotenv>=1.0",
  "itsdangerous>=2.2",
  "qrcode>=7.4",
  "pillow>=10.4",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uvicorn]
factory = false

[tool.ruff]
line-length = 100
